# teste_poetry

./: README.md  pyproject.toml
errors/: exceptions.py
sdk_demo/: string_validator.py
