[tool.poetry]
name = "strin-validator"
version = "0.1.0"
description = ""
authors = ["KaiqueBellmont <kaiquebellmont@gmail.com>"]
readme = "README.md"
packages = [{include = "sdk_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
